--- a/index.html
+++ b/index.html
@@ -2,10 +2,193 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>My_Portfolio</title>
 </head>
 <body>
-<h1> Janani Isurika</h1>
-<p> The basic paragraph consists of three parts: a topic sentence, supporting details, and a concluding sentence. This basic paragraph format will help you to write and organize one paragraph and transition to the next. Topic Sentence: Often, the Topic sentence is the first sentence of a paragraph.</p>
+<header>
+    <nav>
+        <h3>Portfolio.</h3>
+
+        <a href="">About</a>
+        <a href="">Services</a>
+        <a href="">Projects</a>
+        <a href="">Assignments</a>
+        <a href="">Skills</a>
+        <a href="">Contact</a>
+        <a href="">Gallery</a>
+
+    </nav>
+</header>
+
+<main>
+    <section>
+        <img src="" alt="" width="">
+    </section>
+
+    <section>
+        <h1>Hello</h1>
+        <h2>I'M Janani Isurika</h2>
+        <h2>Web developer & UI/UX designer</h2>
+        <p>Hi , I’m Janani Isurika Web developer and UI/UX Designer.Visit my profile and stay connect with me.</p>
+
+        <div>
+            <a href="">Facebook</a>
+            <a href="">Instagram</a>
+            <a href="">Google</a>
+        </div>
+
+        <div>
+            <button>Contact me</button>
+        </div>
+    </section>
+</main>
+<hr>
+
+<header>
+    <section>
+        <img src="" alt="" width="">
+    </section>
+
+    <nav>
+        <h3>About Me</h3>
+        <h5>Fornt-end developer & designer!</h5>
+        <p>I’m Janani Isurika Front-End developer and UI/UX Designer.I can design and build your website as you want.I have one year of experience in web development as well as UI/UX Designing.Now I can able to design your website or application. </p>
+
+    </nav>
+
+    <div>
+        <button>Read more</button>
+    </div>
+
+</header>
+<hr>
+
+<header>
+    <nav>
+        <h3>My Services</h3>
+    </nav>
+
+    <section>
+        <img src="" alt="" width="">
+    </section>
+
+    <nav>
+        <h5>Web Development</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At beatae commodi consequatur, consequuntur distinctio dolores eligendi eos facere fugiat harum illo, incidunt magnam odit pariatur quidem rerum velit voluptas voluptatem!</p>
+
+    </nav>
+    <div>
+        <button>Read more</button>
+    </div>
+
+    <section>
+        <img src="" alt="" width="">
+    </section>
+
+    <nav>
+        <h5>Web Design</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At beatae commodi consequatur, consequuntur distinctio dolores eligendi eos facere fugiat harum illo, incidunt magnam odit pariatur quidem rerum velit voluptas voluptatem!</p>
+
+    </nav>
+    <div>
+        <button>Read more</button>
+    </div>
+
+    <section>
+        <img src="" alt="" width="">
+    </section>
+
+    <nav>
+        <h5>Digital Marketing</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At beatae commodi consequatur, consequuntur distinctio dolores eligendi eos facere fugiat harum illo, incidunt magnam odit pariatur quidem rerum velit voluptas voluptatem!</p>
+
+    </nav>
+    <div>
+        <button>Read more</button>
+    </div>
+</header>
+<hr>
+
+<header>
+    <nav>
+        <h3>My Projects</h3>
+        <h4>Project 1</h4>
+        <h5>Project name</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A consequuntur distinctio eligendi eos nesciunt voluptatem voluptatum. Architecto delectus, ea error fuga impedit itaque maxime nisi repellendus voluptatem voluptatibus! Corporis, unde?</p>
+    </nav>
+    <div>
+        <button>Project</button>
+    </div>
+
+    <nav>
+        <h4>Project 2</h4>
+        <h5>Project name</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A consequuntur distinctio eligendi eos nesciunt voluptatem voluptatum. Architecto delectus, ea error fuga impedit itaque maxime nisi repellendus voluptatem voluptatibus! Corporis, unde?</p>
+    </nav>
+    <div>
+        <button>Project</button>
+    </div>
+
+    <nav>
+        <h4>Project 3</h4>
+        <h5>Project name</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A consequuntur distinctio eligendi eos nesciunt voluptatem voluptatum. Architecto delectus, ea error fuga impedit itaque maxime nisi repellendus voluptatem voluptatibus! Corporis, unde?</p>
+    </nav>
+    <div>
+        <button>Project</button>
+    </div>
+
+</header>
+<hr>
+
+<header>
+    <nav>
+        <h3>Assignments</h3>
+        <h4>Assignment 1</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores culpa deleniti ex exercitationem facilis hic iure laudantium nam, officiis possimus quidem sequi, suscipit veniam voluptatum. Accusamus aspernatur eius laborum!</p>
+    </nav>
+    <div>
+        <button>Show</button>
+    </div>
+
+    <nav>
+        <h4>Assignment 2</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores culpa deleniti ex exercitationem facilis hic iure laudantium nam, officiis possimus quidem sequi, suscipit veniam voluptatum. Accusamus aspernatur eius laborum!</p>
+    </nav>
+    <div>
+        <button>Show</button>
+    </div>
+
+    <nav>
+        <h4>Assignment 3</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores culpa deleniti ex exercitationem facilis hic iure laudantium nam, officiis possimus quidem sequi, suscipit veniam voluptatum. Accusamus aspernatur eius laborum!</p>
+    </nav>
+    <div>
+        <button>Show</button>
+    </div>
+
+</header>
+<hr>
+
+<header>
+    <nav>
+        <h3>My Skills...</h3>
+    </nav>
+</header>
+
+<header>
+    <nav>
+        <h3>Contact me !</h3>
+    </nav>
+</header>
+<form>
+    <input type="text" placeholder="Full Name">
+    <input type="tel" placeholder="Mobile Number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"><br><br>
+    <input type="email" placeholder="E-mail address"><br><br>
+    <textarea id="address" placeholder="Your Message" cols="70" rows="10"></textarea><br><br>
+    <button type="send message">Send Message</button>
+
+</form>
+
 </body>
 </html>
