--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>My_Portfolio</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" type="text/html" href="assets/images/favicon.png">
 
 </head>
