init the project

--- a/CSS.html
+++ b/CSS.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>My Portfolio</title>
@@ -70,36 +70,54 @@
 
 </section>
 
-<!-- section-->
+<!--Services section-->
 <section class="services" id="services">
     <h2 class="myservices">My<span>Services</span></h2>
 
-    <div class="service2">
-        <div class="box"></div>
-
+    <div class="service-box">
+        <div class="box">
+        <!--box icon-->
         <h3>Web Development</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam asperiores autem consequuntur deleniti, dolorem enim et laudantium maxime nostrum odio pariatur provident quaerat, quod repellat sunt suscipit tenetur velit.</p>
 
         <a href="#" class="btn">Read More</a>
     </div>
 
-    <div class="service2">
-        <div class="box"></div>
 
+        <div class="box">
+        <!--box icon-->
         <h3>Web Design</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam asperiores autem consequuntur deleniti, dolorem enim et laudantium maxime nostrum odio pariatur provident quaerat, quod repellat sunt suscipit tenetur velit.</p>
 
         <a href="#" class="btn">Read More</a>
     </div>
 
-    <div class="service2">
-        <div class="box"></div>
-
+        <div class="box">
+        <!--box icon-->
         <h3>Digital Marketing</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam asperiores autem consequuntur deleniti, dolorem enim et laudantium maxime nostrum odio pariatur provident quaerat, quod repellat sunt suscipit tenetur velit.</p>
 
         <a href="#" class="btn">Read More</a>
     </div>
+
+    </div>
+</section>
+
+<!--project section-->
+<section class="projects" id="projects">
+    <h2 class="project-header">My<span>Projects</span></h2>
+
+    <div class="project-box">
+        <div class="p-box">
+            <img src="assets/images/project-image.jpg">
+            <div class="content">
+                <h4>project 01</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium amet consectetur corporis cum eius, eveniet facere facilis maiores maxime minus nemo nulla, praesentium quo rem similique sint suscipit ullam unde.</p>
+            </div>
+
+        </div>
+    </div>
+
 </section>
 
 
