--- a/CSS.html
+++ b/CSS.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/fontawsome/css/all.min.css ">
 
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
 <body>
 
@@ -76,8 +78,8 @@
 
     <div class="service-box">
         <div class="box">
-        <!--box icon-->
-        <h3>Web Development</h3>
+            <i class='bx bx-code-alt'></i>
+            <h3>Web Development</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam asperiores autem consequuntur deleniti, dolorem enim et laudantium maxime nostrum odio pariatur provident quaerat, quod repellat sunt suscipit tenetur velit.</p>
 
         <a href="#" class="btn">Read More</a>
@@ -85,16 +87,16 @@
 
 
         <div class="box">
-        <!--box icon-->
-        <h3>Web Design</h3>
+            <i class='bx bx-paint'></i>
+            <h3>Web Design</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam asperiores autem consequuntur deleniti, dolorem enim et laudantium maxime nostrum odio pariatur provident quaerat, quod repellat sunt suscipit tenetur velit.</p>
 
         <a href="#" class="btn">Read More</a>
     </div>
 
         <div class="box">
-        <!--box icon-->
-        <h3>Digital Marketing</h3>
+            <i class='bx bx-bar-chart-alt'></i>
+            <h3>Digital Marketing</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam asperiores autem consequuntur deleniti, dolorem enim et laudantium maxime nostrum odio pariatur provident quaerat, quod repellat sunt suscipit tenetur velit.</p>
 
         <a href="#" class="btn">Read More</a>
@@ -108,17 +110,175 @@
     <h2 class="project-header">My<span>Projects</span></h2>
 
     <div class="project-box">
+
+
         <div class="p-box">
-            <img src="assets/images/project-image.jpg">
+            <img src="assets/images/project%20p1.jpg">
             <div class="content">
                 <h4>project 01</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium amet consectetur corporis cum eius, eveniet facere facilis maiores maxime minus nemo nulla, praesentium quo rem similique sint suscipit ullam unde.</p>
             </div>
-
         </div>
+
+
+        <div class="p-box">
+            <img src="assets/images/project%20p2.jpg">
+            <div class="content">
+                <h4>project 02</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium amet consectetur corporis cum eius, eveniet facere facilis maiores maxime minus nemo nulla, praesentium quo rem similique sint suscipit ullam unde.</p>
+            </div>
+        </div>
+
+
+        <div class="p-box">
+            <img src="assets/images/project%20p3.jpg">
+            <div class="content">
+                <h4>project 03</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium amet consectetur corporis cum eius, eveniet facere facilis maiores maxime minus nemo nulla, praesentium quo rem similique sint suscipit ullam unde.</p>
+            </div>
+        </div>
+
+
+        <div class="p-box">
+            <img src="assets/images/project%20p4.jpg">
+            <div class="content">
+                <h4>project 04</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium amet consectetur corporis cum eius, eveniet facere facilis maiores maxime minus nemo nulla, praesentium quo rem similique sint suscipit ullam unde.</p>
+            </div>
+        </div>
+
+
+        <div class="p-box">
+            <img src="assets/images/project%20p5.jpg">
+            <div class="content">
+                <h4>project 05</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium amet consectetur corporis cum eius, eveniet facere facilis maiores maxime minus nemo nulla, praesentium quo rem similique sint suscipit ullam unde.</p>
+            </div>
+        </div>
+
+
+        <div class="p-box">
+            <img src="assets/images/project%20p6.jpg">
+            <div class="content">
+                <h4>project 06</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium amet consectetur corporis cum eius, eveniet facere facilis maiores maxime minus nemo nulla, praesentium quo rem similique sint suscipit ullam unde.</p>
+            </div>
+        </div>
+
+
     </div>
 
 </section>
+
+<!--Assignment section-->
+<section class="assignment" id="assignment">
+    <h2 class="assignment-header">My<span>Assignments</span></h2>
+
+    <div class="assignment-box">
+        <div class="ass-box">
+            <i class='bx bx-code-alt'></i>
+            <h3>Assignment 01</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam asperiores autem consequuntur deleniti, dolorem enim et laudantium maxime nostrum odio pariatur provident quaerat, quod repellat sunt suscipit tenetur velit.</p>
+
+            <a href="#" class="btn">Read More</a>
+        </div>
+
+        <div class="ass-box">
+            <i class='bx bx-code-alt'></i>
+            <h3>Assignment 02</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam asperiores autem consequuntur deleniti, dolorem enim et laudantium maxime nostrum odio pariatur provident quaerat, quod repellat sunt suscipit tenetur velit.</p>
+
+            <a href="#" class="btn">Read More</a>
+        </div>
+
+        <div class="ass-box">
+            <i class='bx bx-code-alt'></i>
+            <h3>Assignment 03</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam asperiores autem consequuntur deleniti, dolorem enim et laudantium maxime nostrum odio pariatur provident quaerat, quod repellat sunt suscipit tenetur velit.</p>
+
+            <a href="#" class="btn">Read More</a>
+        </div>
+
+        <div class="ass-box">
+            <i class='bx bx-code-alt'></i>
+            <h3>Assignment 04</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam asperiores autem consequuntur deleniti, dolorem enim et laudantium maxime nostrum odio pariatur provident quaerat, quod repellat sunt suscipit tenetur velit.</p>
+
+            <a href="#" class="btn">Read More</a>
+        </div>
+
+        <div class="ass-box">
+            <i class='bx bx-code-alt'></i>
+            <h3>Assignment 05</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam asperiores autem consequuntur deleniti, dolorem enim et laudantium maxime nostrum odio pariatur provident quaerat, quod repellat sunt suscipit tenetur velit.</p>
+
+            <a href="#" class="btn">Read More</a>
+        </div>
+
+        <div class="ass-box">
+            <i class='bx bx-code-alt'></i>
+            <h3>Assignment 06</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam asperiores autem consequuntur deleniti, dolorem enim et laudantium maxime nostrum odio pariatur provident quaerat, quod repellat sunt suscipit tenetur velit.</p>
+
+            <a href="#" class="btn">Read More</a>
+        </div>
+    </div>
+
+
+</section>
+
+<!--Skills section-->
+<section class="skills" id="skills">
+    <h2 class="skill-header">My<span>Skills</span></h2>
+
+
+</section>
+
+
+<!--contact section-->
+<section class="contact" id="contact">
+    <h2 class="contact-header">Contact<span>Me !</span></h2>
+
+    <form action="#">
+        <div class="input-box">
+            <input type="text" placeholder="Full Name...">
+            <input type="email" placeholder="Enter your e-mail...">
+        </div>
+
+        <div class="input-box">
+            <input type="number" placeholder="Mobile number...">
+            <input type="text" placeholder="Your age">
+        </div>
+
+        <textarea name="massage" id="msg" cols="30" rows="10" placeholder="Your message...."></textarea>
+        <input type="submit" value="send message" class="btn">
+
+    </form>
+</section>
+
+<!--gallery section-->
+<section class="gallery" id="gallery">
+    <h2 class="gallery-header">Gallery</h2>
+
+    <div>
+        <img src="assets/images/p1.jpg" width="400px">
+        <img src="assets/images/p2.jpg" width="400px">
+        <img src="assets/images/p4.jpg" width="400px">
+    </div>
+</section>
+
+
+<!--footer section-->
+<footer class="footer">
+    <div class="footer-text">
+        <p>Created By @Janani Isurika | All Rights Reserved</p>
+    </div>
+
+    <div class="footer_icon">
+        <a href="#"><i class='bx bx-up-arrow-circle'></i></a>
+    </div>
+
+</footer>
 
 
 </body>
